[project]
name = "refren"
version = "0.2.0"
description = "Scientific manuscript PDF file renamer"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "anthropic>=0.86.0",
    "pdfplumber>=0.11",
]

[project.scripts]
refren = "refren:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "build>=1.4.2",
    "hatchling>=1.29.0",
    "twine>=6.2.0",
]
